# FairLens-AI

./: .build_info  .gitignore  README.md  package-lock 2.json  sample_data.csv  test_sample.csv
backend/: .env  CLOUD_ARCHITECTURE.md  Dockerfile  main.py  pyproject.toml  requirements.txt  response.json  start.sh
backend/models/: schemas.py
backend/routers/: analysis.py  kaggle_dataset.py  mitigation.py  report.py  upload.py
backend/services/: ai_insight_service.py  bias_detection.py  fairness_metrics.py  mitigation.py  preprocessing.py  report_generator.py
frontend/: BUILD_SUMMARY.md  README.md  index.html  netlify.toml  package-lock.json  package.json  start.sh  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AlertSystem.jsx  AnimationUtils.jsx  AppLayout.jsx  BiasFlags.jsx  BiasScoreGauge.jsx  ConfigPanel.jsx  DatasetAnalysis.jsx  DatasetOverview.jsx  DistributionCharts.jsx  ErrorBoundary.jsx  Explanations.jsx  FairnessScoreGauge.jsx  KPICard.jsx  MetricsDashboard.jsx  MitigationPanel.jsx  ModelPerformance.jsx  NotificationPanel.jsx  PageTransition.jsx  Reports.jsx  Sidebar.jsx  Skeleton.jsx  ThemeToggle.jsx  UploadSection.jsx
frontend/src/contexts/: ThemeContext.jsx  ToastContext.jsx
frontend/src/pages/: BiasDetection.jsx  DashboardOverview.jsx  DatasetAnalysis.jsx  Explanations.jsx  FairnessMetrics.jsx  Mitigation.jsx  ModelComparison.jsx  ModelPerformance.jsx  Reports.jsx  Simulation.jsx  Timeline.jsx
frontend/src/store/: useAppStore.js
