[project]
name = "fairlens-ai-backend"
version = "1.0.0"
description = "FairLens AI — Bias Detection & Mitigation Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "reportlab>=4.1.0",
    "python-multipart>=0.0.9",
]

[tool.fastapi]
entrypoint = "main:app"
